Beans + Controlador Usuários e Controlador Times

--- a/Copa2014-Server/WebContent/WEB-INF/web.xml
+++ b/Copa2014-Server/WebContent/WEB-INF/web.xml
@@ -19,4 +19,74 @@
     <servlet-name>InstalarAplicacao</servlet-name>
     <url-pattern>/InstalarAplicacao</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>CadastrarUsuario</display-name>
+    <servlet-name>CadastrarUsuario</servlet-name>
+    <servlet-class>com.github.bcfurtado.copaserver.servlets.CadastrarUsuario</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CadastrarUsuario</servlet-name>
+    <url-pattern>/CadastrarUsuario</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>PegarTime</display-name>
+    <servlet-name>PegarTime</servlet-name>
+    <servlet-class>com.github.bcfurtado.copaserver.servlets.PegarTime</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PegarTime</servlet-name>
+    <url-pattern>/PegarTime</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ListarTimes</display-name>
+    <servlet-name>ListarTimes</servlet-name>
+    <servlet-class>com.github.bcfurtado.copaserver.servlets.ListarTimes</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ListarTimes</servlet-name>
+    <url-pattern>/ListarTimes</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ListarNoticias</display-name>
+    <servlet-name>ListarNoticias</servlet-name>
+    <servlet-class>com.github.bcfurtado.copaserver.servlets.ListarNoticias</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ListarNoticias</servlet-name>
+    <url-pattern>/ListarNoticias</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>PegarNoticia</display-name>
+    <servlet-name>PegarNoticia</servlet-name>
+    <servlet-class>com.github.bcfurtado.copaserver.servlets.PegarNoticia</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PegarNoticia</servlet-name>
+    <url-pattern>/PegarNoticia</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>PegarEstadio</display-name>
+    <servlet-name>PegarEstadio</servlet-name>
+    <servlet-class>com.github.bcfurtado.copaserver.servlets.PegarEstadio</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PegarEstadio</servlet-name>
+    <url-pattern>/PegarEstadio</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ListarEstadios</display-name>
+    <servlet-name>ListarEstadios</servlet-name>
+    <servlet-class>com.github.bcfurtado.copaserver.servlets.ListarEstadios</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ListarEstadios</servlet-name>
+    <url-pattern>/ListarEstadios</url-pattern>
+  </servlet-mapping>
 </web-app>
